body overflow problemx fixed

--- a/app/app.global.scss
+++ b/app/app.global.scss
@@ -19,7 +19,6 @@ $box-shadow: 0 0.2em 0.2em -0.125em rgba(10, 10, 10, 0.1),
  @import '~bulma/sass/components/navbar.sass';
 */
 body {
-  overflow-x: hidden;
   /*
   font-family: Arial, Helvetica, Helvetica Neue, serif;
 */
